--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <base target="_top">
   <title>Gretex One - Login</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="style.css">
   
 </head>
